# echo-app-poetry

./: pyproject.toml
app/: pyproject.toml
