[tool.poetry]
name = "echo-app-poetry"
version = "1.0.0"
description = "A simple echo app using Poetry"
authors = ["r8vnhill <reachme@ravenhill.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13.2"
app = {path = "app", develop = true}
lib = {path = "lib", develop = true}
flask = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
